/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 */

package com.mycompany.eva2_3_sobreescritura;

/**
 *
 * @author jesus
 */
public class EVA2_3_SOBREESCRITURA {

    public static void main(String[] args) {
        Persona perso=new Persona("juan","perez",50);
        //perso.imprimirDatos();
        System.out.println(perso.toString());
        Cliente clie=new Cliente("jesus","meza",18,"kdnksd");
        //clie.imprimirDatos();
        System.out.println(clie.toString());
        
        
        
    }
}
